--- a/inman-tesla/package.json
+++ b/inman-tesla/package.json
@@ -12,6 +12,7 @@
     "gsap": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
